moved abstract stuff to ApplicationKernel project, added notification and NotificationLogger

--- a/ApplicationKernel/ApplicationKernel.csproj
+++ b/ApplicationKernel/ApplicationKernel.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="5.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\ApplicationKernel\ApplicationKernel.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
