updated mediator system, and api request handlers

--- a/WebShop.Web/WebShop.Web.csproj
+++ b/WebShop.Web/WebShop.Web.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApplicationKernel.Infrastructure\ApplicationKernel.Infrastructure.csproj" />
     <ProjectReference Include="..\WebShop.UseCases\WebShop.UseCases.csproj" />
   </ItemGroup>
 
