--- a/ApplicationKernel.Domain/ApplicationKernel.Domain.csproj
+++ b/ApplicationKernel.Domain/ApplicationKernel.Domain.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MediatR" Version="5.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
