--- a/WebShop.Infrastructure/WebShop.Infrastructure.csproj
+++ b/WebShop.Infrastructure/WebShop.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.Domain.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
 
