--- a/WebShop/WebShop.csproj
+++ b/WebShop/WebShop.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.Domain.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
 
