--- a/WebShop.Infrastructure.ReadStore/WebShop.Infrastructure.ReadStore.csproj
+++ b/WebShop.Infrastructure.ReadStore/WebShop.Infrastructure.ReadStore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.Domain.csproj" />
+    <ProjectReference Include="..\ApplicationKernel.Infrastructure\ApplicationKernel.Infrastructure.csproj" />
     <ProjectReference Include="..\WebShop.UseCases\WebShop.Features.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
