--- a/WebShop.Infrastructure.ReadStore/WebShop.Infrastructure.PersistentCache.csproj
+++ b/WebShop.Infrastructure.ReadStore/WebShop.Infrastructure.PersistentCache.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.Domain.csproj" />
+    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.csproj" />
     <ProjectReference Include="..\WebShop.UseCases\WebShop.Features.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
