--- a/WebShop.Infrastructure/WebShop.Infrastructure.csproj
+++ b/WebShop.Infrastructure/WebShop.Infrastructure.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.Domain.csproj" />
+    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.csproj" />
     <ProjectReference Include="..\WebShop.UseCases\WebShop.Features.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
