renamed project folders

--- a/ApplicationKernel.Infrastructure/ApplicationKernel.Infrastructure.csproj
+++ b/ApplicationKernel.Infrastructure/ApplicationKernel.Infrastructure.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.csproj" />
+    <ProjectReference Include="..\ApplicationKernel\ApplicationKernel.csproj" />
   </ItemGroup>
 
 </Project>
