--- a/WebShop.Infrastructure/WebShop.Infrastructure.csproj
+++ b/WebShop.Infrastructure/WebShop.Infrastructure.csproj
@@ -9,8 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ApplicationKernel.Domain\ApplicationKernel.csproj" />
-    <ProjectReference Include="..\WebShop.UseCases\WebShop.Features.csproj" />
+    <ProjectReference Include="..\ApplicationKernel\ApplicationKernel.csproj" />
+    <ProjectReference Include="..\WebShop.Features\WebShop.Features.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
 
