Changed file organization from by models to by type. Refactored service. Added tests for DiscountService.ApplyDiscounts.

--- a/WebShop.Tests/WebShop.Tests.csproj
+++ b/WebShop.Tests/WebShop.Tests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="24.3.0" />
+    <PackageReference Include="Bogus" Version="25.0.2" />
     <PackageReference Include="FluentAssertions" Version="5.4.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebShop.Infrastructure\WebShop.Infrastructure.csproj" />
+    <ProjectReference Include="..\WebShop.Infrastructure\WebShop.DataAccess.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
 
