renamed library to WebShop.DataAccess

--- a/WebShop.Tests/WebShop.Tests.csproj
+++ b/WebShop.Tests/WebShop.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WebShop.Infrastructure\WebShop.Infrastructure.DataAccess.csproj" />
+    <ProjectReference Include="..\WebShop.DataAccess\WebShop.DataAccess.csproj" />
     <ProjectReference Include="..\WebShop\WebShop.csproj" />
   </ItemGroup>
 
